send confirmation email

--- a/ArsaRExCH/appsettings.json
+++ b/ArsaRExCH/appsettings.json
@@ -8,5 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "EmailSettings": {
+    "EmailAddress": "Armindev7@outlook.com",
+    "Password": ""
+  },
   "AllowedHosts": "*"
 }
