--- a/ArsaRExCH/appsettings.json
+++ b/ArsaRExCH/appsettings.json
@@ -10,7 +10,7 @@
   },
   "EmailSettings": {
     "EmailAddress": "Armindev7@outlook.com",
-    "Password": ""
+    "Password": "Armin-x5252"
   },
   "AllowedHosts": "*"
 }
