--- a/ArsaRExCH.Client/ArsaRExCH.Client.csproj
+++ b/ArsaRExCH.Client/ArsaRExCH.Client.csproj
@@ -9,8 +9,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Pages\Bet.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Bet.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\Bet.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Pages\Bet.razor" />
   </ItemGroup>
 
 </Project>
