--- a/ArsaRExCH/appsettings.json
+++ b/ArsaRExCH/appsettings.json
@@ -12,5 +12,9 @@
     "EmailAddress": "Armindev7@outlook.com",
     "Password": "Armin-x5252"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSecurityKey": "RANDOM_KEY_MUST_NOT_BE_SHAREDkkkkkkkkkkkkkkkkkkkkkkkkkkkkk",
+  "JwtIssuer": "https://localhost",
+  "JwtAudience": "https://localhost",
+  "JwtExpiryInDays": 1
 }
