--- a/ArsaRExCH/ArsaRExCH.csproj
+++ b/ArsaRExCH/ArsaRExCH.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Components\BtcPrice.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ArsaRExCH.Client\ArsaRExCH.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.5" />
@@ -18,6 +22,10 @@
     <PackageReference Include="Nethereum.HdWallet" Version="4.20.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.6.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Components\Pages\BtcPrice.razor" />
   </ItemGroup>
 
 </Project>
