--- a/ArsaRExCH/ArsaRExCH.csproj
+++ b/ArsaRExCH/ArsaRExCH.csproj
@@ -38,4 +38,8 @@
     <_ContentIncludedByDefault Remove="Components\Pages\AdminPanel.razor" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\CustomComponent\" />
+  </ItemGroup>
+
 </Project>
