--- a/ArsaRExCH/ArsaRExCH.csproj
+++ b/ArsaRExCH/ArsaRExCH.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,10 +7,7 @@
     <UserSecretsId>aspnet-ArsaRExCH-f2fc9a90-bedc-431c-aec8-8e9ae3bbfd15</UserSecretsId>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Content Remove="Components\BtcPrice.razor" />
-    <Content Remove="Components\Pages\AdminPanel.razor" />
-  </ItemGroup>
+
 
   <ItemGroup>
     <ProjectReference Include="..\ArsaRExCH.Client\ArsaRExCH.Client.csproj" />
@@ -23,23 +20,9 @@
     <PackageReference Include="Nethereum.HdWallet" Version="4.20.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.6.1" />
+
   </ItemGroup>
 
-  <ItemGroup>
-    <None Include="Components\Pages\AdminPanel.razor" />
-    <None Include="Components\Pages\BtcPrice.razor" />
-  </ItemGroup>
 
-  <ItemGroup>
-    <UpToDateCheckInput Remove="Components\Pages\AdminPanel.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <_ContentIncludedByDefault Remove="Components\Pages\AdminPanel.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Components\CustomComponent\" />
-  </ItemGroup>
 
 </Project>
