2 new component test added

--- a/ArsaRExCH/appsettings.json
+++ b/ArsaRExCH/appsettings.json
@@ -8,10 +8,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "DetailedErrors": true,
+
   "EmailSettings": {
     "EmailAddress": "Armindev7@outlook.com",
     "Password": "Armin-x5252"
   },
+
+
   "AllowedHosts": "*",
   "JwtSecurityKey": "RANDOM_KEY_MUST_NOT_BE_SHAREDasdstretrvjvbjhkjhkjiigjjbjhfhdgfchvh",
   "JwtIssuer": "https://localhost",
