--- a/ArsaRExCH/ArsaRExCH.csproj
+++ b/ArsaRExCH/ArsaRExCH.csproj
@@ -7,6 +7,10 @@
     <UserSecretsId>aspnet-ArsaRExCH-f2fc9a90-bedc-431c-aec8-8e9ae3bbfd15</UserSecretsId>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Remove="Components\MyComponents\CalculateBetResault.razor" />
+  </ItemGroup>
+
 
 
 
@@ -23,6 +27,30 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.6.1" />
 
+  </ItemGroup>
+
+
+
+
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Components\MyComponents\CalculateBetResault.razor" />
+  </ItemGroup>
+
+
+
+
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Components\MyComponents\CalculateBetResault.razor" />
+  </ItemGroup>
+
+
+
+
+
+  <ItemGroup>
+    <None Include="Components\MyComponents\CalculateBetResault.razor" />
   </ItemGroup>
 
 
