--- a/ArsaRExCH/ArsaRExCH.csproj
+++ b/ArsaRExCH/ArsaRExCH.csproj
@@ -24,7 +24,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.5" />
     <PackageReference Include="MudBlazor" Version="7.8.0" />
+    <PackageReference Include="NBitcoin" Version="7.0.39" />
     <PackageReference Include="Nethereum.HdWallet" Version="4.20.0" />
+    <PackageReference Include="QBitNinja.Client" Version="1.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.6.1" />
 
