--- a/ArsarExchAPI/appsettings.json
+++ b/ArsarExchAPI/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ArsaRExCH-f2fc9a90-bedc-431c-aec8-8e9ae3bbfd15;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+
+  "JwtSecurityKey": "RANDOM_KEY_MUST_NOT_BE_SHAREDasdstretrvjvbjhkjhkjiigjjbjhfhdgfchvh",
+  "JwtIssuer": "https://localhost",
+  "JwtAudience": "https://localhost",
+  "JwtExpiryInDays": 1
 }
