--- a/ArsarExchAPI/appsettings.json
+++ b/ArsarExchAPI/appsettings.json
@@ -13,5 +13,6 @@
   "JwtSecurityKey": "RANDOM_KEY_MUST_NOT_BE_SHAREDasdstretrvjvbjhkjhkjiigjjbjhfhdgfchvh",
   "JwtIssuer": "https://localhost",
   "JwtAudience": "https://localhost",
-  "JwtExpiryInDays": 1
+  "JwtAccessTokenExpiryInMinutes": 15,
+  "JwtRefreshTokenExpiryInDays": 7
 }
